# TelegramSubscriptionBot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: ba051ae155a4_try_migate.py
app/: config.py  container.py  logging.py  main.py
app/bot/keyboards/: subscription.py
app/bot/middlewares/: container.py  request.py  subscription.py
app/bot/routers/: admin.py  messages.py
app/models/: channel.py
app/services/: subscription.py
app/storage/repositories/: channels.py
